; ModuleID = '/home/carl/AnghaBench/hashcat/src/extr_status.c_status_get_msec_real.c'
source_filename = "/home/carl/AnghaBench/hashcat/src/extr_status.c_status_get_msec_real.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local double @status_get_msec_real(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca double, align 8
  %4 = alloca double, align 8
  %5 = alloca double, align 8
  store i32* %0, i32** %2, align 8
  %6 = load i32*, i32** %2, align 8
  %7 = call double @status_get_msec_running(i32* %6)
  store double %7, double* %3, align 8
  %8 = load i32*, i32** %2, align 8
  %9 = call double @status_get_msec_paused(i32* %8)
  store double %9, double* %4, align 8
  %10 = load double, double* %3, align 8
  %11 = load double, double* %4, align 8
  %12 = fsub double %10, %11
  store double %12, double* %5, align 8
  %13 = load double, double* %5, align 8
  ret double %13
}

declare dso_local double @status_get_msec_running(i32*) #1

declare dso_local double @status_get_msec_paused(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
